styling changes to about and home

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,34 +1,93 @@
 <section class="container">
+  <app-header></app-header>
   <h1 class="h1">About The Developers</h1>
-  <div class="dev1 sim">
-    <img src="assets/img/image.png" alt="chris" />
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi pariatur
-      enim dicta, expedita beatae officia nostrum atque nisi praesentium libero.
-      Quis perspiciatis libero quia deserunt, harum dolore enim unde tempore?
-    </p>
-  </div>
-  <div class="dev2 sim">
-    <img src="assets/img/headshot (2).jpg" alt="ab" />
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum
-      accusamus natus est ipsam nisi, aspernatur pariatur quae mollitia dolorum
-      voluptatibus, tempora commodi eos expedita harum quam beatae ipsa dolore.
-    </p>
-  </div>
-  <div class="dev3 sim">
-    <img src="assets/img/IMG_3365.jpg" alt="kati" />
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam vel amet
-      consectetur sint dolorum tenetur excepturi. Porro, ea enim suscipit,
-      perspiciatis repudiandae qui hic necessitatibus facilis error non,
-      consequuntur est.
-    </p>
-  </div>
-  <div>
-    <h2>linked In</h2>
-    <p>https://www.linkedin.com/in/chris-shaohualiu-liu/</p>
-    <p>https://www.linkedin.com/in/kati-johnson/</p>
-    <p>https://www.linkedin.com/in/abdullahthedev/</p>
+  <div class="devs-container">
+    <div class="dev-box">
+      <div class="headline">
+        <h2 class="name">Chris Liu</h2>
+        <a
+          href="https://www.linkedin.com/in/chris-shaohualiu-liu/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a
+          href="https://github.com/chrisshaohualiu/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-github-square"></i
+        ></a>
+      </div>
+      <div class="dev">
+        <img src="assets/cl-headshot.png" alt="Chris Liu" class="headshot" />
+        <p class="bio">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi
+          pariatur enim dicta, expedita beatae officia nostrum atque nisi
+          praesentium libero. Quis perspiciatis libero quia deserunt, harum
+          dolore enim unde tempore?
+        </p>
+      </div>
+    </div>
+    <div class="dev-box">
+      <div class="headline abh">
+        <h2 class="name">Abdullah Hamidudeen</h2>
+        <a
+          href="https://www.linkedin.com/in/abdullahthedev/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a
+          href="https://github.com/Abdulvip/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-github-square"></i
+        ></a>
+      </div>
+      <div class="dev abd">
+        <p class="bio ab">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum
+          accusamus natus est ipsam nisi, aspernatur pariatur quae mollitia
+          dolorum voluptatibus, tempora commodi eos expedita harum quam beatae
+          ipsa dolore.
+        </p>
+        <img
+          src="assets/ab-headshot.jpg"
+          alt="Abdullah Hamidudeen"
+          class="headshot absh"
+        />
+      </div>
+    </div>
+    <div class="dev-box">
+      <div class="headline">
+        <h2 class="name">Kati Johnson</h2>
+        <a
+          href="https://www.linkedin.com/in/kati-johnson/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a
+          href="https://github.com/katibjohnson/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-github-square"></i
+        ></a>
+      </div>
+
+      <div class="dev">
+        <img
+          src="assets/kj-headshot.jpeg"
+          alt="Kati Johnson"
+          class="headshot"
+        />
+        <p class="bio">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam vel
+          amet consectetur sint dolorum tenetur excepturi. Porro, ea enim
+          suscipit, perspiciatis repudiandae qui hic necessitatibus facilis
+          error non, consequuntur est.
+        </p>
+      </div>
+    </div>
   </div>
 </section>
