--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,29 +1,76 @@
+a,
+a:visited {
+  text-decoration: none;
+  color: white;
+}
 .container {
   height: 100%;
   max-width: 100%;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
+
 .h1 {
-  position: absolute;
-  margin-left: 35%;
+  margin: 0;
+  font-size: 6vw;
+  text-align: center;
+}
+.devs-container {
+  display: inline-block;
+  padding-top: 0;
+}
+.dev-box {
+  display: inline-block;
+}
+.headline {
+  display: flex;
+  align-items: center;
+  margin: 2vh 0 0 0;
+}
+.name {
+  margin: 0 5vw;
+  font-size: 7vw;
 }
 
-.dev1 {
-  margin-top: 100px;
-  position: relative;
-  padding: 10px;
+.fab {
+  color: white;
+  font-size: 7vw;
+  margin-right: 2vw;
+}
+.headshot {
+  border-radius: 50%;
+  max-width: 30vw;
+  max-height: 30vw;
+  -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+}
+.dev {
+  display: flex;
+  margin: 0 2vw;
+}
+.bio {
+  font-size: 4.5vw;
+  margin: 0 0 0 2vw;
+  line-height: 2.5vh;
+  text-align: justify;
+}
+.abd {
+  display: flex;
+}
+.ab {
+  margin: 0 2vw 0 0;
+  order: 1;
 }
 
-.dev2 {
-  margin-left: 35%;
-  position: relative;
-  padding: 10px;
+.absh {
+  order: 2;
 }
 
-.dev3 {
-  margin-left: 0%;
-  padding: 10px;
+.abh {
+  justify-content: flex-end;
+  margin-right: 2vw;
 }
 
 /* tablet view _____________________________ */
@@ -31,4 +78,60 @@
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
+  .header {
+    display: flex;
+    justify-content: center;
+  }
+  .h1 {
+    margin: 0;
+    font-size: 4vw;
+    position: relative;
+  }
+  .devs-container {
+    display: flex;
+    padding-top: 3vh;
+  }
+  .dev-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .headline {
+    display: flex;
+    align-items: center;
+    margin: 0 0 2vh 0;
+  }
+  .name {
+    margin: 0 1vw;
+    font-size: 2.2vw;
+  }
+
+  .fab {
+    color: white;
+    font-size: 3vw;
+    margin-right: 1vw;
+  }
+  .headshot {
+    border-radius: 50%;
+    max-width: 15vw;
+    max-height: 12vw;
+  }
+  .dev {
+    display: flex;
+    flex-direction: column;
+    margin: 0 2vw;
+    align-items: center;
+  }
+  .bio {
+    font-size: 1.5vw;
+    line-height: normal;
+    margin: 2vh 0;
+  }
+  .absh {
+    order: 1;
+  }
+  .ab {
+    margin: 2vh 0;
+    order: 2;
+  }
 }
