--- a/src/app/home-top-artists/home-top-artists.component.html
+++ b/src/app/home-top-artists/home-top-artists.component.html
@@ -1,6 +1,7 @@
 <div class="large-card">
   <app-artist-card
     (artistClicked)="goToArtist($event)"
+    (favoriteEvent)= "updateFavorites()"
     class="artist-card"
     *ngFor="let item of list.slice(0, 9)"
     [name]="item.name"
