--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,7 +47,7 @@
     <app-artist-list [list]="recentlyPlayed"></app-artist-list>
   </div>
 
-  <app-home-top-artists
+  <app-home-top-artists (favoriteEvent)="updatePage()"
     class="top-artists-d"
     [list]="topArtists"
   ></app-home-top-artists>
