--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -98,7 +98,7 @@ a:visited {
   background: rgba(0, 0, 0, 0.7);
   position: fixed;
   z-index: 2;
-  bottom: 0vh;
+  /* bottom: 0vh; */
   -webkit-transition: height 0.35s ease-in-out;
   transition: height 0.35s ease-in-out;
   overflow: scroll;
