video list updates

--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -3,7 +3,7 @@
     <img
       class="artist-img"
       src="{{ sampleImageUrl }}"
-      default="https://cdn.onlinewebfonts.com/svg/img_258083.png"
+      default="assets/default.png"
     />
   </div>
   <button class="button">
