changed favorites functionality

--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -8,10 +8,10 @@
   </div>
   <button class="button">
     <i
-      [ngClass]="favoritesId ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
+      [ngClass]="artist.favorited ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
       (click)="toggleFavorites()"
     ></i>
   </button>
 
-  <p (click)="goToArtist()" class="artist-name">{{ name }}</p>
+  <p (click)="goToArtist()" class="artist-name">{{ artist.name }}</p>
 </div>
