--- a/src/app/home-top-artists/home-top-artists.component.html
+++ b/src/app/home-top-artists/home-top-artists.component.html
@@ -1,9 +1,9 @@
 <div class="large-card">
   <app-artist-card
     (artistClicked)="goToArtist($event)"
-    (favoriteEvent)="updateFavorites()"
+    (favoriteEvent)="updateFavorites($event)"
     class="artist-card"
     *ngFor="let item of list.slice(0, 9)"
-    [name]="item.name"
+    [artist]="item"
   ></app-artist-card>
 </div>
