--- a/src/app/artist-list/artist-list.component.html
+++ b/src/app/artist-list/artist-list.component.html
@@ -1,9 +1,10 @@
 <div class="artists">
   <app-artist-card
+
     (artistClicked)="goToArtist($event)"
-    (favoriteEvent)="updateFavorites()"
+    (favoriteEvent)="updateFavorites($event)"
     class="artist-card"
-    *ngFor="let item of list | slice: 0:10"
-    [name]="item.name"
+    *ngFor="let item of list | slice: 0:10"  
+    [artist]="item"
   ></app-artist-card>
 </div>
