main and artist page changes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -72,10 +72,9 @@
   </div>
 
   <p class="tagline" *ngIf="router.url === '/home'">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa optio
-    suscipit in vero dolorum repellat laudantium hic aliquid. Doloremque optio
-    earum blanditiis officia perferendis dolores nobis alias facilis
-    consequuntur aperiam!
+    Stream and listen to millions of artists’ music videos and performances.
+    Save your favorite artists and their videos. Discover new and top artists
+    and video.
   </p>
 
   <div class="home-search-box-d" *ngIf="router.url === '/home'">
