--- a/src/app/home-top-artists/home-top-artists.component.css
+++ b/src/app/home-top-artists/home-top-artists.component.css
@@ -1,64 +1,49 @@
 .large-card {
-  display: flex;
-  width: 85vw;
-  margin: 0;
-  flex-wrap: wrap;
   position: relative;
-  bottom: 7vh;
 }
 
 .artist-card {
   z-index: 1;
+  position: absolute;
 }
 
 .artist-card:nth-child(1) {
-  position: relative;
-  bottom: 8vh;
-  left: 12vw;
+  left: 10vw;
 }
 .artist-card:nth-child(2) {
-  position: relative;
-  top: 1vh;
-  right: 10vw;
+  top: 28vh;
+  left: 5vw;
 }
 .artist-card:nth-child(3) {
-  position: relative;
-  top: 20vh;
-  right: 8vw;
+  top: 22vh;
+  left: 20vw;
 }
 .artist-card:nth-child(4) {
-  position: relative;
-  top: 13vh;
-  right: 6vw;
+  top: 3vh;
+  left: 30vw;
 }
 .artist-card:nth-child(5) {
-  position: relative;
+  left: 42vw;
   top: 20vh;
 }
 .artist-card:nth-child(6) {
-  position: relative;
-  right: 16vw;
+  left: 55vw;
+  top: 5vh;
 }
 .artist-card:nth-child(7) {
-  position: relative;
-  right: 12vw;
+  left: 68vw;
+  top: 27vh;
 }
 .artist-card:nth-child(8) {
-  position: relative;
-  left: 65vw;
+  left: 70vw;
 }
-.artist-card:nth-child(9) {
-  position: relative;
-  bottom: 27vh;
-  left: 60vw;
-}
+
 @media only screen and (min-width: 1400px) {
-  .large-card {
+  /* .large-card {
     display: flex;
     width: 85vw;
     margin: 0;
     flex-wrap: wrap;
     position: relative;
-    bottom: 10vh;
-  }
+  } */
 }
