--- a/src/app/artist-card/artist-card.component.css
+++ b/src/app/artist-card/artist-card.component.css
@@ -1,3 +1,13 @@
+.artist-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 29vw;
+}
+.img-box {
+  position: relative;
+}
 .artist-img {
   border-radius: 50%;
   -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
@@ -6,36 +16,15 @@
   max-width: 100%;
 }
 
-.button,
-.button:focus {
-  outline: none;
-  border: none;
-  background: transparent;
-  padding: 0;
-  margin: 0;
-  height: 0;
-  width: 0;
-}
-.artist-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  width: 29vw;
-}
-
 .fa-plus-circle,
 .fa-minus-circle {
   color: white;
   font-size: 6.5vw;
-  position: relative;
-  bottom: 4vh;
-  left: 8vw;
+  position: absolute;
+  bottom: 1vh;
+  right: 1vw;
   opacity: 0.8;
   border-radius: 50%;
-  -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
 }
 
 .fa-plus-circle:active,
@@ -49,7 +38,7 @@
   hyphens: auto;
   text-align: center;
   line-height: 12px;
-  font-size: 3.5vw;
+  font-size: 4vw;
   margin: 2vw 0;
 }
 
@@ -59,18 +48,18 @@
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
   .artist-card {
-    width: 8vw;
+    width: 7vw;
   }
 
   .artist-name {
-    font-size: 1.3vw;
-    margin: 0;
+    font-size: 1vw;
+    margin: 0.8vh 0;
   }
 
   .fa-plus-circle,
   .fa-minus-circle {
-    font-size: 2vw;
-    bottom: 3vh;
-    left: 2vw;
+    font-size: 1.5vw;
+    bottom: 1.7vh;
+    right: 0vw;
   }
 }
