--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -1,17 +1,16 @@
 <div class="artist-card">
-  <div (click)="goToArtist()">
+  <div class="img-box">
     <img
       class="artist-img"
       src="{{ sampleImageUrl }}"
       default="assets/default.png"
+      (click)="goToArtist()"
     />
-  </div>
-  <button class="button">
     <i
       [ngClass]="favoritesId ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
       (click)="toggleFavorites()"
     ></i>
-  </button>
+  </div>
 
   <p (click)="goToArtist()" class="artist-name">{{ name }}</p>
 </div>
