--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -72,6 +72,7 @@ li {
     display: flex;
     flex-direction: column;
     max-width: 100vw;
+    position: relative;
   }
   .not-home-header-d {
     display: flex;
@@ -122,13 +123,12 @@ li {
   }
 
   .tagline {
-    position: relative;
-    left: 25vw;
-    bottom: 8vh;
+    position: absolute;
+    left: 20vw;
+    bottom: 7vh;
     line-height: 20px;
     margin: 0;
-    height: 2vh;
-    width: 50vw;
+    width: 40vw;
   }
   .home-search-box-d {
     display: flex;
@@ -142,7 +142,7 @@ li {
     flex-grow: 5;
   }
 }
-@media only screen and (min-width: 1400px) {
+/* @media only screen and (min-width: 1400px) {
   .logo-large {
     height: 35vh;
     width: auto;
@@ -156,4 +156,4 @@ li {
     position: relative;
     bottom: 3vh;
   }
-}
+} */
