--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -71,15 +71,7 @@ a:visited {
     display: flex;
     flex-direction: column;
     height: 100vh;
-  }
-
-  .tagline {
-    width: 40vw;
-    font: 2vw;
-    display: block;
-    position: -webkit-sticky;
-    position: sticky;
-    left: 32vw;
+    position: relative;
   }
 
   .vertical {
@@ -90,6 +82,8 @@ a:visited {
     width: 12vw;
     margin-right: 0vw;
     z-index: 2;
+    display: flex;
+    flex-direction: column;
   }
 
   .vertical::-webkit-scrollbar-track {
@@ -121,7 +115,7 @@ a:visited {
   }
   .label {
     font-variant: small-caps;
-    position: relative;
+    position: fixed;
     font-size: 1.5vw;
     width: 12vw;
     overflow-wrap: break-word;
@@ -131,12 +125,11 @@ a:visited {
   }
   .recently {
     left: 86vw;
-    bottom: 3vh;
+    top: 50vh;
   }
   .favs,
   .favs:focus {
     left: 86vw;
-    bottom: 48vh;
     outline: none;
   }
 
