--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,15 +39,21 @@
     FAVORITES
   </p>
   <div class="vertical favs-box">
-    <app-artist-list [list]="favoriteArtists" (favoriteEvent)="updatePage()"></app-artist-list>
+    <app-artist-list
+      [list]="favoriteArtists"
+      (favoriteEvent)="updatePage()"
+    ></app-artist-list>
   </div>
 
   <p class="recently label">RECENTLY VIEWED</p>
   <div class="vertical recent-box">
-    <app-artist-list [list]="recentlyPlayed" (favoriteEvent)="recentFavoriteChange()"></app-artist-list>
+    <app-artist-list
+      [list]="recentlyPlayed"
+      (favoriteEvent)="recentFavoriteChange()"
+    ></app-artist-list>
   </div>
-
-  <app-home-top-artists (favoriteEvent)="topFavoriteChange()"
+  <app-home-top-artists
+    (favoriteEvent)="topFavoriteChange()"
     class="top-artists-d"
     [list]="topArtists"
   ></app-home-top-artists>
