--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -72,7 +72,6 @@ li {
     display: flex;
     flex-direction: column;
     max-width: 100vw;
-    position: relative;
   }
   .not-home-header-d {
     display: flex;
@@ -123,12 +122,13 @@ li {
   }
 
   .tagline {
-    position: absolute;
-    left: 20vw;
-    bottom: 7vh;
+    position: relative;
+    left: 25vw;
+    bottom: 8vh;
     line-height: 20px;
     margin: 0;
-    width: 40vw;
+    height: 2vh;
+    width: 50vw;
   }
   .home-search-box-d {
     display: flex;
@@ -142,7 +142,7 @@ li {
     flex-grow: 5;
   }
 }
-/* @media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1400px) {
   .logo-large {
     height: 35vh;
     width: auto;
@@ -156,4 +156,4 @@ li {
     position: relative;
     bottom: 3vh;
   }
-} */
+}
