--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -71,7 +71,15 @@ a:visited {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    position: relative;
+  }
+
+  .tagline {
+    width: 40vw;
+    font: 2vw;
+    display: block;
+    position: -webkit-sticky;
+    position: sticky;
+    left: 32vw;
   }
 
   .vertical {
@@ -82,8 +90,6 @@ a:visited {
     width: 12vw;
     margin-right: 0vw;
     z-index: 2;
-    display: flex;
-    flex-direction: column;
   }
 
   .vertical::-webkit-scrollbar-track {
@@ -115,7 +121,7 @@ a:visited {
   }
   .label {
     font-variant: small-caps;
-    position: fixed;
+    position: relative;
     font-size: 1.5vw;
     width: 12vw;
     overflow-wrap: break-word;
@@ -125,11 +131,12 @@ a:visited {
   }
   .recently {
     left: 86vw;
-    top: 50vh;
+    bottom: 3vh;
   }
   .favs,
   .favs:focus {
     left: 86vw;
+    bottom: 48vh;
     outline: none;
   }
 
