--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -55,8 +55,9 @@ button:focus {
     border-radius: 20px;
     background-color: white;
     display: flex;
+    justify-content: space-between;
     padding-left: 2vw;
-    width: 32vw;
+    width: 40vw;
   }
   .not-home-search-d {
     border-radius: 20px;
@@ -73,7 +74,7 @@ button:focus {
   .not-home-input-d:focus {
     border: none;
     outline: none;
-    font-size: 1.7vw;
+    font-size: 2vw;
     flex-grow: 9;
     padding: 0;
     margin: 0;
