--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,18 +39,25 @@
     FAVORITES
   </p>
   <div class="vertical favs-box">
-    <app-artist-list [list]="favoriteArtists" (favoriteEvent)="updateFavorites($event)"></app-artist-list>
+    <app-artist-list
+      [list]="favoriteArtists"
+      (favoriteEvent)="updateFavorites($event)"
+    ></app-artist-list>
   </div>
 
   <p class="recently label">RECENTLY VIEWED</p>
   <div class="vertical recent-box">
-    <app-artist-list [list]="recentlyPlayed" (favoriteEvent)="updateFavorites($event)"></app-artist-list>
+    <app-artist-list
+      [list]="recentlyPlayed"
+      (favoriteEvent)="updateFavorites($event)"
+    ></app-artist-list>
   </div>
-
-  <app-home-top-artists (favoriteEvent)="updateFavorites($event)"
+  <app-home-top-artists
+    (favoriteEvent)="updateFavorites($event)"
     class="top-artists-d"
     [list]="topArtists"
-  ></app-home-top-artists>
+  >
+  </app-home-top-artists>
   <div class="footer-d">
     <a routerLink="/about">About the Developers</a>
   </div>
