video favorites changes and search

--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -7,7 +7,7 @@
       (click)="goToArtist()"
     />
     <i
-      [ngClass]="artist.favorite ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
+      [ngClass]="artist.favorited ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
       (click)="toggleFavorites()"
     ></i>
   </div>
