--- a/src/app/video-card/video-card.component.html
+++ b/src/app/video-card/video-card.component.html
@@ -2,12 +2,12 @@
   <div (click)="goToArtist()">
     <img class="video-img" src="{{ videoInfo.thumbnail }}" alt="" />
   </div>
-  <button class="button">
+  
     <i
-      [ngClass]="favoritesId ? 'fas fa-minus-square' : 'fas fa-plus-square'"
+      [ngClass]="videoInfo.favorited ? 'fas fa-minus-square' : 'fas fa-plus-square'"
       (click)="toggleFavorites()"
     >
     </i>
-  </button>
+ 
   <p (click)="goToArtist()" class="artist-name">{{ videoInfo.title }}</p>
 </div>
