--- a/src/app/video-card/video-card.component.html
+++ b/src/app/video-card/video-card.component.html
@@ -9,5 +9,5 @@
     >
     </i>
  
-  <p (click)="goToArtist()" class="artist-name">{{ videoInfo.title }}</p>
+  <p (click)="goToArtist()" class="video-name">{{ videoInfo.title }}</p>
 </div>
