--- a/src/app/favorites/favorites.component.css
+++ b/src/app/favorites/favorites.component.css
@@ -2,16 +2,16 @@ h1 {
     margin: 0;
 }
 
+.mobile-section {
+  position: relative;
+  height: 100vh;
+}
+
 a,
 a:visited {
   text-decoration: none;
   color: white;
 }
-
-.mobile-section {
-    position: relative;
-    height: 100vh;
-  }
 
 .artists-box {
     display: flex;
@@ -38,10 +38,35 @@ a:visited {
     position: absolute;
   }
 
+  .footer-m {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    bottom: 1vw;
+    margin-top: 4vh;
+  }
+
+  .desktop-section{
+    display: none
+  }
+
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
+  .mobile-section{
+    display:none;
+  }
+
+  .desktop-section{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .videos{
+    overflow: visible;
+    margin-top: 10vh;
+  }
 }
 
