--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,14 +1,11 @@
 <app-header></app-header>
 <section class="mobile-section">
-
   <div class = "artists-box">
     <h1 class = "headline">favorite videos</h1>
     <app-video-list class="videos"
     (favoriteVideoEvent)="updateFavoriteVideos($event)"
     [list]="favoriteVideosList"></app-video-list>
   </div>
-
-
 <div class = "artists-box">
   <h1 class = "headline">favorite artists</h1>
   <app-artist-list
@@ -17,7 +14,15 @@
   (favoriteEvent)="updateFavoriteArtists($event)"
 ></app-artist-list>
 </div>
-
-
-
+<div class="footer-m">
+  <a routerLink="/about">About the Developers</a>
+</div>
+</section>
+<section class="desktop-section">
+  <div class = "artists-box">
+    <h1 class = "headline">favorite videos</h1>
+    <app-video-grid class="videos"
+    (favoriteVideoEvent)="updateFavoriteVideos($event)"
+    [list]="favoriteVideosList"></app-video-grid>
+  </div>
 </section>
