--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -15,7 +15,6 @@ a:visited {
 
 .artist-headline {
   display: flex;
-  /* justify-content: space-around; */
   margin: 0 2vw 2vw 5vw;
   position: relative;
 }
@@ -30,8 +29,9 @@ a:visited {
   -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
   -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
   box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
-  width: 25vw;
+  max-width: 25vw;
 }
+
 .fa-plus-circle,
 .fa-minus-circle {
   color: white;
@@ -61,11 +61,12 @@ a:visited {
   color: white;
   background-color: black;
   right: 1vw;
-  bottom: 1vh;
+  bottom: 0vh;
   outline: none;
   border: none;
   background: transparent;
   padding: 0;
+  font-size: 4vw;
 }
 
 .artists {
@@ -74,22 +75,15 @@ a:visited {
 }
 .vid-box {
   width: 100vw;
-  height: auto;
   position: relative;
+  padding-bottom: 2vh;
 }
-/* .fa-plus-square,
-.fa-minus-square {
+.bio-close,
+.bio-expand {
   color: white;
-  opacity: 0.8;
-  -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  border-radius: 50%;
-  font-size: 5.5vw;
-  position: absolute;
-  bottom: 1.4vh;
-  right: 0vw;
-} */
+  font-size: 4vw;
+  margin-left: 1vw;
+}
 
 .artists-box {
   display: flex;
@@ -97,36 +91,30 @@ a:visited {
   align-items: center;
 }
 
-.fa-plus-square,
-.fa-minus-square {
+.remove-fav,
+.add-fav {
   color: #00ff48;
   opacity: 0.7;
-  -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
   font-size: 9vw;
   position: absolute;
   bottom: 0vh;
-  right: 0vw;
+  right: 1vw;
 }
-.fa-plus-square:active,
-.fa-minus-square:active {
-  color: #00ff48;
+.remove-fav:active,
+.add-fav:active {
+  color: #05992f;
 }
-.bio,
-.fa-expand {
-  padding-left: 1vw;
-  color: white;
-  opacity: 0.8;
-  font-size: 5.5vw;
+.bottom {
+  position: relative;
 }
 .bio-box {
   height: 0vh;
   width: 100vw;
   background: rgba(0, 0, 0, 0.7);
-  position: fixed;
+  position: absolute;
   z-index: 2;
   /* bottom: 0vh; */
+  top: 0;
   -webkit-transition: height 0.35s ease-in-out;
   transition: height 0.35s ease-in-out;
   overflow: scroll;
@@ -139,10 +127,11 @@ a:visited {
 .bio-p {
   -webkit-transition: height 0.35s ease-in-out;
   transition: height 0.35s ease-in-out;
-  height: 0;
+  /* height: 0; */
   max-width: 100vw;
   padding: 0 3vw;
   word-wrap: break-word;
+  position: absolute;
 }
 .footer-m {
   display: flex;
