--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -1,55 +1,67 @@
 <main>
-  <app-header></app-header>
-  <div class="artist-headline">
-    <div class="img-box">
-      <img
-        class="artist-img"
-        src="{{ imgUrl }}"
-        default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
-      />
+  <div class="top">
+    <app-header></app-header>
+    <div class="artist-headline">
+      <div class="img-box">
+        <img
+          class="artist-img"
+          src="{{ imgUrl }}"
+          default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
+        />
 
+        <i
+          [ngClass]="favoritesId ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
+          (click)="toggleFavorites()"
+        ></i>
+      </div>
+      <div class="name-box">
+        <h1 class="artist-name">{{ artistName }}</h1>
+      </div>
+      <button class="bio-btn icon" (click)="toggleBio()">
+        ARTIST BIO<i
+          [ngClass]="
+            bioExpand
+              ? 'far fa-minus-square bio-close'
+              : 'fas fa-expand bio-expand'
+          "
+        ></i>
+      </button>
+    </div>
+    <div class="vid-box">
+      <app-video-player [currentVideoId]="currentVideoId"></app-video-player>
+
+      <!-- <button (click)="getArtistVideos()">contact youtube api</button> -->
       <i
-        [ngClass]="favoritesId ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
+        [ngClass]="
+          favoritesId
+            ? 'fas fa-minus-square remove-fav'
+            : 'fas fa-plus-square add-fav'
+        "
         (click)="toggleFavorites()"
       ></i>
     </div>
-    <div class="name-box">
-      <h1 class="artist-name">{{ artistName }}</h1>
+  </div>
+  <div class="bottom">
+    <div class="bio-box" [ngClass]="{ transform: bioExpand }">
+      <p class="bio-p" [ngClass]="{ transform: bioExpand }">{{ biography }}</p>
     </div>
-    <button class="bio-btn icon" (click)="toggleBio()">
-      ARTIST BIO<i
-        [ngClass]="bioExpand ? 'fas fa-minus-square bio' : 'fas fa-expand'"
-      ></i>
-    </button>
-  </div>
-  <div class="vid-box">
-    <app-video-player [currentVideoId]="currentVideoId"></app-video-player>
+    <app-video-list
+      (favoriteVideoEvent)="updateFavoriteVideos($event)"
+      (changeVideoEvent)="changeVideo($event)"
+      [list]="videoArray"
+    ></app-video-list>
+    <div class="artists-box">
+      <h2>Similar Artists</h2>
+      <app-artist-list class="artists" [list]="similar"></app-artist-list>
+    </div>
 
-    <!-- <button (click)="getArtistVideos()">contact youtube api</button> -->
-    <i
-      [ngClass]="favoritesId ? 'fas fa-minus-square' : 'fas fa-plus-square'"
-      (click)="toggleFavorites()"
-    ></i>
-  </div>
-  <div class="bio-box" [ngClass]="{ transform: bioExpand }">
-    <p class="bio-p" [ngClass]="{ transform: bioExpand }">{{ biography }}</p>
-  </div>
-  <app-video-list
-    (favoriteVideoEvent)="updateFavoriteVideos($event)"
-    (changeVideoEvent)="changeVideo($event)"
-    [list]="videoArray"
-  ></app-video-list>
-  <div class="artists-box">
-    <h2>Similar Artists</h2>
-    <app-artist-list class="artists" [list]="similar"></app-artist-list>
-  </div>
+    <!-- <form #apiKeyForm="ngForm" (submit)="setApiKey(apiKeyForm)">
+      <input type="text" name="apiKey" ngModel />
+      <button>set api key</button>
+    </form> -->
 
-  <form #apiKeyForm="ngForm" (submit)="setApiKey(apiKeyForm)">
-    <input type="text" name="apiKey" ngModel />
-    <button>set api key</button>
-  </form>
-
-  <div class="footer-m" [ngClass]="{ hidden: bioExpand }">
-    <a routerLink="/about">About the Developers</a>
+    <div class="footer-m" [ngClass]="{ hidden: bioExpand }">
+      <a routerLink="/about">About the Developers</a>
+    </div>
   </div>
 </main>
