--- a/src/app/artist-card/artist-card.component.css
+++ b/src/app/artist-card/artist-card.component.css
@@ -44,6 +44,13 @@
 
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
+  .artist-card {
+    width: 15vw;
+  }
+
+  .artist-name{
+    font-size: 2vw;
+  }
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
