--- a/src/app/favorites/favorites.component.css
+++ b/src/app/favorites/favorites.component.css
@@ -52,6 +52,17 @@ a:visited {
 
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
+  .headline{
+    font-size: 5vw;
+  }
+
+  .videos{
+    margin-top: 7vh;
+  }
+
+  .artists{
+    margin-top: 7vh;
+  }
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
@@ -65,8 +76,47 @@ a:visited {
   }
 
   .videos{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    margin-top: 10vh;
+  }
+
+  .videos::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: white;
+    border-radius: 10px;
+  }
+  .videos::-webkit-scrollbar {
+    width: 10px;
+    background-color: black;
+  }
+
+  .videos::-webkit-scrollbar-thumb {
+    background-color: black;
+    border: 2px solid #555555;
+    border-radius: 10px;
+  }
+
+  .artists{
+    display: flex;
+    justify-content: center;
     overflow: visible;
     margin-top: 10vh;
+  }
+
+  .headline {
+    font-size: 5vw;
+    font-weight: 600;
+
+  }
+  .grid-container {
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 55vh;
+    width: 100vw;
   }
 }
 
