--- a/src/app/video-card/video-card.component.css
+++ b/src/app/video-card/video-card.component.css
@@ -1,59 +1,41 @@
-
 .video-img {
-    -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
-    -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
-    box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
-    max-width: 100%;
-  }
-
-  .video-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    width: 29vw;
-  }
-
-.button,
-.button:focus {
-  outline: none;
-  border: none;
-  background: transparent;
-  padding: 0;
-  margin: 0;
-  height: 0;
-  width: 0;
+  -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  max-width: 100%;
 }
 
-.fa-plus-circle,
-.fa-minus-circle {
-  color: white;
-  font-size: 6.5vw;
+.video-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: relative;
-  bottom: 4vh;
-  left: 8vw;
-  opacity: 0.8;
-  border-radius: 50%;
-  -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
+  width: 29vw;
 }
 
-.fa-plus-circle:active,
-.fa-minus-circle:active {
-  color: #00ff48;
+.remove-fav,
+.add-fav {
+  color: white;
+  opacity: 0.8;
+  font-size: 5.5vw;
+  position: absolute;
+  bottom: 1.4vh;
+  right: 0vw;
+}
+.remove-fav:active,
+.add-fav:active {
+  color: #05992f;
 }
 
 .video-name {
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    hyphens: auto;
-    text-align: center;
-    line-height: 12px;
-    font-size: 3.5vw;
-    margin: 2vw 0;
-  }
-  
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+  text-align: center;
+  line-height: 12px;
+  font-size: 3.5vw;
+  margin: 2vw 0;
+}
 
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
@@ -69,10 +51,17 @@
     margin: 0.8vh 0;
   }
 
-  .fa-plus-circle,
-  .fa-minus-circle {
+  .remove-fav,
+  .add-fav {
+    color: #00ff48;
+    opacity: 0.7;
     font-size: 1.5vw;
-    bottom: 1.7vh;
-    right: 0vw;
+    position: absolute;
+    bottom: 0vh;
+    right: 1vw;
+  }
+  .remove-fav:active,
+  .add-fav:active {
+    color: #05992f;
   }
 }
