--- a/src/app/video-player/video-player.component.html
+++ b/src/app/video-player/video-player.component.html
@@ -1,16 +1,16 @@
 <div #wrapper class="demo-youtube-player">
   <youtube-player
-    videoId="{{ currentVideoId }}"
+    videoId="{{ currentVideo.videoId }}"
     [width]="videoWidth"
     [height]="videoHeight"
     suggestedQuality="highres"
   ></youtube-player>
-  <!-- <i
+  <i
     [ngClass]="
-      favoritesId
+      currentVideo.favorited
         ? 'fas fa-minus-square remove-fav'
         : 'fas fa-plus-square add-fav'
     "
     (click)="toggleFavorites()"
-  ></i> -->
+  ></i>
 </div>
