--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -1,4 +1,11 @@
-.main {
+.desktop-section {
+  display: none;
+}
+/* .mobile-section {
+  position: relative;
+  height: 100vh;
+} */
+.mobile-section {
   display: flex;
   flex-direction: column;
 }
@@ -21,6 +28,7 @@ a:visited {
 
 .img-box {
   width: 25vw;
+  max-height: 25vw;
   position: relative;
   flex-basis: content;
 }
@@ -69,22 +77,11 @@ a:visited {
   font-size: 4vw;
 }
 
-.artists {
-  width: 100%;
-  overflow: scroll;
-}
-
 .bio-close,
 .bio-expand {
   color: white;
   font-size: 4vw;
   margin-left: 1vw;
-}
-
-.artists-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .remove-fav,
@@ -123,7 +120,6 @@ a:visited {
 .bio-p {
   -webkit-transition: height 0.35s ease-in-out;
   transition: height 0.35s ease-in-out;
-  /* height: 0; */
   max-width: 100vw;
   padding: 0 3vw;
   word-wrap: break-word;
@@ -140,9 +136,140 @@ a:visited {
   display: none;
 }
 
+.artists-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2vh;
+}
+.artists {
+  width: 100%;
+  overflow: scroll;
+}
+
+.sim {
+  font-size: 6vw;
+  font-weight: 600;
+  font-variant: small-caps;
+}
+
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
+  .mobile-section {
+    display: none;
+  }
+  .desktop-section {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    position: relative;
+  }
+
+  .artist-headline {
+    display: flex;
+    margin: 0;
+    position: relative;
+    left: 30vw;
+    bottom: 5vw;
+  }
+
+  .img-box {
+    width: 15vw;
+    height: 15vw;
+    position: relative;
+    flex-basis: content;
+  }
+  .artist-img {
+    width: 15vw;
+    height: 15vw;
+    border-radius: 50%;
+    -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+    -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+    box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  }
+
+  .fa-plus-circle,
+  .fa-minus-circle {
+    color: white;
+    opacity: 0.8;
+    font-size: 3vw;
+    position: absolute;
+    bottom: 1.4vh;
+    right: 0vw;
+  }
+  .fa-plus-circle:active,
+  .fa-minus-circle:active {
+    color: #00ff48;
+  }
+  /* .bio-name{
+  display: flex;
+  flex
+} */
+  .artist-name {
+    font-variant: small-caps;
+    font-size: 7vw;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+    flex-grow: 2;
+    margin: 0;
+    line-height: 60px;
+  }
+
+  .bio-box-d {
+    width: 40vw;
+    height: 10vw;
+    overflow: auto;
+  }
+
+  .bio-pd {
+  }
+
+  .remove-fav,
+  .add-fav {
+    color: #00ff48;
+    opacity: 0.7;
+    font-size: 9vw;
+    position: absolute;
+    bottom: 0vh;
+    right: 1vw;
+  }
+  .remove-fav:active,
+  .add-fav:active {
+    color: #05992f;
+  }
+  .bottom {
+    position: relative;
+  }
+
+  .footer-m {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    bottom: 1vw;
+    margin-top: 4vh;
+  }
+  .hidden {
+    display: none;
+  }
+
+  .artists-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2vh;
+  }
+  .artists {
+    width: 100%;
+    overflow: scroll;
+  }
+
+  .sim {
+    font-size: 6vw;
+    font-weight: 600;
+    font-variant: small-caps;
+  }
 }
