--- a/src/app/video-card/video-card.component.css
+++ b/src/app/video-card/video-card.component.css
@@ -1,16 +1,18 @@
-.video-img {
-  -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
-  -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
-  box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
-  max-width: 100%;
-}
-
 .video-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
   width: 29vw;
+}
+.img-box {
+  position: relative;
+}
+.video-img {
+  -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+  max-width: 100%;
 }
 
 .remove-fav,
@@ -19,7 +21,7 @@
   opacity: 0.8;
   font-size: 5.5vw;
   position: absolute;
-  bottom: 1.4vh;
+  bottom: 0.3vh;
   right: 0vw;
 }
 .remove-fav:active,
@@ -32,7 +34,7 @@
   word-wrap: break-word;
   hyphens: auto;
   text-align: center;
-  line-height: 12px;
+  line-height: 15px;
   font-size: 3.5vw;
   margin: 2vw 0;
 }
