--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,6 @@ body {
 @media only screen and (min-width: 1025px) {
   body {
     height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 }
