current video bug

--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -83,7 +83,7 @@
     </div>
   </div>
   <div class="main">
-    <app-video-player [currentVideoId]="currentVideoId"></app-video-player>
+    <app-video-player [currentVideo]="currentVideo"></app-video-player>
     <div class="menu">
       <app-video-list
         (favoriteVideoEvent)="updateFavoriteVideos($event)"
