--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -46,10 +46,13 @@
       </div>
       <div class="dev abd">
         <p class="bio ab">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum
-          accusamus natus est ipsam nisi, aspernatur pariatur quae mollitia
-          dolorum voluptatibus, tempora commodi eos expedita harum quam beatae
-          ipsa dolore.
+          The tech industry is filled with possibilities and im willing to take
+          the risks. I live in the Detroit michgan area where i also attended a
+          Grand Circus bootcamp to gain skills needed to become a junior front
+          end developer. As a person of many passions i believe coding is one of
+          my new ones and its a good way to generate income. You can checkout
+          some of my work on Github and reach me on Linked In with the links
+          above
         </p>
         <img
           src="assets/ab-headshot.jpg"
