--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
     ></app-artist-list>
   </div>
   <div class="artists-box">
-    <h1 class="headline">recently played</h1>
+    <h1 class="headline">recently viewed</h1>
     <app-artist-list
       class="artists"
       (favoriteEvent)="updateFavorites($event)"
