--- a/src/app/video-card/video-card.component.html
+++ b/src/app/video-card/video-card.component.html
@@ -16,6 +16,7 @@
     >
     </i>
   </div>
-
-  <p (click)="goToArtist()" class="video-name">{{ videoInfo.title }}</p>
+  <div class="name-box">
+    <p (click)="goToArtist()" class="video-name">{{ videoInfo.title }}</p>
+  </div>
 </div>
