--- a/src/app/artist-list/artist-list.component.css
+++ b/src/app/artist-list/artist-list.component.css
@@ -1,7 +1,11 @@
-.artists {
+.artists,
+.fav-card {
   display: flex;
   max-width: 100%;
   flex-direction: row;
+  max-height: 40vw;
+  overflow-y: hidden;
+  overflow-x: scroll;
 }
 
 .artist-card {
@@ -17,7 +21,21 @@
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
-  .artist-card {
-    margin: 1vh;
+  .artists::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: white;
+    border-radius: 10px;
+  }
+
+  .artists::-webkit-scrollbar {
+    height: 7px;
+    background-color: black;
+  }
+
+  .artists::-webkit-scrollbar-thumb {
+    background-color: black;
+    border: 2px solid #555555;
+    border-radius: 10px;
   }
 }
