--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -1,10 +1,9 @@
 .desktop-section {
   display: none;
 }
-/* .mobile-section {
-  position: relative;
-  height: 100vh;
-} */
+.top {
+  padding-bottom: 3vw;
+}
 .mobile-section {
   display: flex;
   flex-direction: column;
@@ -129,20 +128,23 @@ a:visited {
   display: flex;
   justify-content: center;
   width: 100vw;
-  bottom: 1vw;
+  top: 26vh;
   margin-top: 4vh;
 }
 .hidden {
   display: none;
 }
 
-.artists-box {
+.artists-box,
+.videos-box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2vh;
+  margin-top: 0;
 }
-.artists {
+
+.artists,
+.videos {
   width: 100%;
   overflow: scroll;
 }
@@ -165,26 +167,30 @@ a:visited {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    position: relative;
+    /* position: relative; */
   }
-
+  .header {
+    position: relative;
+    width: 100vw;
+    max-height: 33vh;
+  }
   .artist-headline {
     display: flex;
     margin: 0;
     position: relative;
     left: 30vw;
-    bottom: 5vw;
+    bottom: 7vw;
   }
 
   .img-box {
-    width: 15vw;
-    height: 15vw;
+    width: 13vw;
+    height: 13vw;
     position: relative;
     flex-basis: content;
   }
   .artist-img {
-    width: 15vw;
-    height: 15vw;
+    width: 13vw;
+    height: 13vw;
     border-radius: 50%;
     -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
     -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
@@ -195,7 +201,7 @@ a:visited {
   .fa-minus-circle {
     color: white;
     opacity: 0.8;
-    font-size: 3vw;
+    font-size: 2.5vw;
     position: absolute;
     bottom: 1.4vh;
     right: 0vw;
@@ -204,10 +210,7 @@ a:visited {
   .fa-minus-circle:active {
     color: #00ff48;
   }
-  /* .bio-name{
-  display: flex;
-  flex
-} */
+
   .artist-name {
     font-variant: small-caps;
     font-size: 7vw;
@@ -215,7 +218,7 @@ a:visited {
     word-wrap: break-word;
     hyphens: auto;
     flex-grow: 2;
-    margin: 0;
+    margin: 0 0 0 4vw;
     line-height: 60px;
   }
 
@@ -223,11 +226,29 @@ a:visited {
     width: 40vw;
     height: 10vw;
     overflow: auto;
+    margin: 1vw 0 0 4vw;
   }
 
-  .bio-pd {
+  .bio-box-d::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: white;
+    border-radius: 10px;
   }
 
+  .bio-box-d::-webkit-scrollbar {
+    width: 10px;
+    background-color: black;
+  }
+
+  .bio-box-d::-webkit-scrollbar-thumb {
+    background-color: black;
+    border: 2px solid #555555;
+    border-radius: 10px;
+  }
+  .main {
+    display: flex;
+  }
   .remove-fav,
   .add-fav {
     color: #00ff48;
@@ -241,8 +262,15 @@ a:visited {
   .add-fav:active {
     color: #05992f;
   }
-  .bottom {
-    position: relative;
+  .menu {
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    background-color: #1e1d1d;
+    border: 1px solid white;
+  }
+  .menu::-webkit-scrollbar {
+    display: none;
   }
 
   .footer-m {
@@ -250,26 +278,25 @@ a:visited {
     justify-content: center;
     width: 100vw;
     bottom: 1vw;
-    margin-top: 4vh;
+    margin-top: 5vh;
   }
   .hidden {
     display: none;
   }
 
-  .artists-box {
+  .artists-box,
+  .videos-box-d {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 2vh;
+    margin: 4vh 0 1vh 1vh;
   }
   .artists {
     width: 100%;
-    overflow: scroll;
+    overflow: visible;
   }
 
   .sim {
-    font-size: 6vw;
-    font-weight: 600;
-    font-variant: small-caps;
+    font-size: 2vw;
+    text-align: center;
   }
 }
