--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -27,25 +27,31 @@
         ></i>
       </button>
     </div>
-
-    <app-video-player (updateVideoFavorite)="updateFavoriteVideos($event)" [currentVideo]="currentVideo"></app-video-player>
+    <app-video-player
+      (updateVideoFavorite)="updateFavoriteVideos($event)"
+      [currentVideo]="currentVideo"
+    ></app-video-player>
   </div>
   <div class="bottom">
     <div class="bio-box" [ngClass]="{ transform: bioExpand }">
       <p class="bio-p" [ngClass]="{ transform: bioExpand }">{{ biography }}</p>
     </div>
-    <app-video-list
-      (favoriteVideoEvent)="updateFavoriteVideos($event)"
-      (changeVideoEvent)="changeVideo($event)"
-      [list]="videoArray"
-    ></app-video-list>
+    <div class="videos-box">
+      <h2 class="sim">Artist Videos</h2>
+      <app-video-list
+        (favoriteVideoEvent)="updateFavoriteVideos($event)"
+        (changeVideoEvent)="changeVideo($event)"
+        [list]="videoArray"
+        class="videos"
+      ></app-video-list>
+    </div>
     <div class="artists-box">
-
       <h2 class="sim">Similar Artists</h2>
-
-
-      <app-artist-list (favoriteEvent)="updateFavoriteArtists($event)" class="artists" [list]="similar"></app-artist-list>
-
+      <app-artist-list
+        (favoriteEvent)="updateFavoriteArtists($event)"
+        class="artists"
+        [list]="similar"
+      ></app-artist-list>
     </div>
 
     <!-- <form #apiKeyForm="ngForm" (submit)="setApiKey(apiKeyForm)">
@@ -59,37 +65,42 @@
   </div>
 </section>
 <section class="desktop-section">
-  <app-header></app-header>
-  <div class="artist-headline">
-    <div class="img-box">
-      <img
-        class="artist-img"
-        src="{{ imgUrl }}"
-        default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
-      />
+  <div class="header">
+    <app-header></app-header>
+    <div class="artist-headline">
+      <div class="img-box">
+        <img
+          class="artist-img"
+          src="{{ imgUrl }}"
+          default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
+        />
 
-      <i
-        [ngClass]="favoritesId ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
-        (click)="toggleFavorites()"
-      ></i>
-    </div>
-    <div class="bio-name">
-      <div class="name-box">
-        <h1 class="artist-name">{{ artistName }}</h1>
+        <i
+          [ngClass]="favoritesId ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
+          (click)="toggleFavorites()"
+        ></i>
       </div>
-      <div class="bio-box-d">
-        <p class="bio-pd">{{ biography }}</p>
+      <div class="bio-name">
+        <div class="name-box">
+          <h1 class="artist-name">{{ artistName }}</h1>
+        </div>
+        <div class="bio-box-d">
+          {{ biography }}
+        </div>
       </div>
     </div>
   </div>
   <div class="main">
     <app-video-player [currentVideo]="currentVideo"></app-video-player>
     <div class="menu">
-      <app-video-list
-        (favoriteVideoEvent)="updateFavoriteVideos($event)"
-        (changeVideoEvent)="changeVideo($event)"
-        [list]="videoArray"
-      ></app-video-list>
+      <div class="videos-box-d">
+        <h2 class="sim">Artist Videos</h2>
+        <app-video-list
+          (favoriteVideoEvent)="updateFavoriteVideos($event)"
+          (changeVideoEvent)="changeVideo($event)"
+          [list]="videoArray"
+        ></app-video-list>
+      </div>
       <div class="artists-box">
         <h2 class="sim">Similar Artists</h2>
         <app-artist-list class="artists" [list]="similar"></app-artist-list>
