--- a/src/app/video-card/video-card.component.css
+++ b/src/app/video-card/video-card.component.css
@@ -4,6 +4,7 @@
   align-items: center;
   position: relative;
   width: 29vw;
+  max-height: 40vw;
 }
 .img-box {
   position: relative;
@@ -12,7 +13,7 @@
   -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
   -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
   box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
-  max-width: 100%;
+  width: 100%;
 }
 
 .remove-fav,
@@ -30,6 +31,9 @@
 }
 
 .video-name {
+  max-height: 10vw;
+  overflow: auto;
+
   overflow-wrap: break-word;
   word-wrap: break-word;
   hyphens: auto;
@@ -49,12 +53,7 @@
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
   .video-card {
-    width: 7vw;
-  }
-
-  .video-name {
-    font-size: 1vw;
-    margin: 0.8vh 0;
+    width: 8vw;
   }
 
   .remove-fav,
@@ -69,5 +68,35 @@
   .remove-fav:active,
   .add-fav:active {
     color: #05992f;
+  }
+
+  .video-name {
+    max-height: 3vw;
+    overflow-y: scroll;
+
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+    text-align: center;
+    line-height: 15px;
+    font-size: 1vw;
+    margin: 0.8vh 0;
+  }
+  .video-name::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: white;
+    border-radius: 10px;
+  }
+
+  .video-name::-webkit-scrollbar {
+    width: 5px;
+    background-color: black;
+  }
+
+  .video-name::-webkit-scrollbar-thumb {
+    background-color: black;
+    border: 2px solid #555555;
+    border-radius: 10px;
   }
 }
