--- a/src/app/video-grid/video-grid.component.html
+++ b/src/app/video-grid/video-grid.component.html
@@ -1,9 +1,10 @@
-<div class = "videos large">
-    <app-video-card
-    class = "video-card"
-    *ngFor="let item of list" 
-    [videoInfo]= "item" 
-    (videoClicked)="goToArtist($event)" 
-    (videoFavorited)="updateFavorites($event)">
-    </app-video-card>
+<div class="videos large">
+  <app-video-card
+    class="video-card"
+    *ngFor="let item of list"
+    [videoInfo]="item"
+    (videoClicked)="goToArtist($event)"
+    (videoFavorited)="updateFavorites($event)"
+  >
+  </app-video-card>
 </div>
