--- a/src/app/video-list/video-list.component.css
+++ b/src/app/video-list/video-list.component.css
@@ -1,18 +1,39 @@
-.videos {
-    display: flex;
-    max-width: 100%;
-    flex-direction: row;
-  }
-  
-  .video-card {
-    margin: 3vw 2vw 0 2vw;
-  }
-  
+.videos,
+.fav-card {
+  display: flex;
+  max-height: 40vw;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  flex-direction: row;
+}
 
+.video-card {
+  margin: 3vw 2vw 0 2vw;
+}
 
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
+  .video-card {
+    margin: 0.7vw 0.7vw;
+  }
+  .videos::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: white;
+    border-radius: 10px;
+  }
+
+  .videos::-webkit-scrollbar {
+    height: 7px;
+    background-color: black;
+  }
+
+  .videos::-webkit-scrollbar-thumb {
+    background-color: black;
+    border: 2px solid #555555;
+    border-radius: 10px;
+  }
 }
